Fixed link to image and deleted .htaccess

--- a/family.html
+++ b/family.html
@@ -62,7 +62,7 @@
 <table>
 <tr>
 <td>
-<img  width="320" height="300" src="us2.JPG" alt = "Sarvjeet Singh and Niharika Ranjan Singh">
+<img  width="320" height="300" src="us2.jpg" alt = "Sarvjeet Singh and Niharika Ranjan Singh">
 </td>
 </tr>
 <tr>
